[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pvsfunc"
version = "4.3.0"
description = "PHOENiX's compilation of VapourSynth Script's and Functions"
license = "GPL-3.0-or-later"
authors = ["PHOENiX <rlaphoenix@pm.me>"]
maintainers = ["PHOENiX <rlaphoenix@pm.me>"]
readme = "README.md"
homepage = "https://github.com/rlaphoenix/pvsfunc"
repository = "https://github.com/rlaphoenix/pvsfunc"
documentation = "https://github.com/rlaphoenix/pvsfunc"
keywords = ["python", "vapoursynth"]
classifiers = [
    # python ver and license set by poetry automatically
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
]
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
pymediainfo = "^5.1.0"
pyd2v = "^1.3.0"
more-itertools = "^8.8.0"
