[metadata]
name = pvsfunc
version = 3.16.0
url = https://github.com/rlaPHOENiX/pvsfunc
author = PHOENiX
author_email = pragma.exe@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = GPLv3
license_file = LICENSE
description = PHOENiX's compilation of VapourSynth Script's and Functions
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = vapoursynth
platforms = any

[options]
install_requires=
    VapourSynth
    pymediainfo>=5.0.3
    pyd2v>=1.0.4
packages = find:
